--- a/client/sass/_vars.scss
+++ b/client/sass/_vars.scss
@@ -10,7 +10,12 @@ $site-gutter: 7.5%;
 
 // FONTS
 
-// $sans: ;
-// $serif: ;
+$sans: 'Circle', sans-serif;
 
 // COLORS
+
+$blue:   #232328;
+$copper: #AD6F45;
+
+$white:  #E2E0D9;
+$black:  #1E1E22;
