--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -13,7 +13,9 @@
 
 @import "components/keyframes";
 @import "components/rule";
+@import "components/section";
 
 // SECTIONS
 
+@import "sections/about";
 @import "sections/header";
