start repos section

--- a/client/sass/sections/_header.scss
+++ b/client/sass/sections/_header.scss
@@ -17,12 +17,12 @@
 .header-subheading {
   margin-bottom: 25px;
 
-  font-size: 2.1rem;
+  font-size: 2.4rem;
   line-height: 1.35;
 }
 
 .header-cta {
-  display: flex;
+  display: inline-flex;
   align-items: center;
 
   color: $copper;
