add footer and badge mobile

--- a/client/sass/_layout.scss
+++ b/client/sass/_layout.scss
@@ -2,7 +2,7 @@ body {
   background-color: $blue;
 }
 
-.wrapper {
+.container {
   width: 100% - 2 * $site-gutter;
   max-width: $site-width;
   margin-right: auto;
