--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -18,5 +18,7 @@
 // SECTIONS
 
 @import "sections/about";
+@import "sections/badge";
+@import "sections/footer";
 @import "sections/header";
 @import "sections/repos";
