start contact section

--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -19,6 +19,7 @@
 
 @import "sections/about";
 @import "sections/badge";
+@import "sections/contact";
 @import "sections/footer";
 @import "sections/header";
 @import "sections/repos";
