--- a/client/sass/sections/_repos.scss
+++ b/client/sass/sections/_repos.scss
@@ -7,13 +7,20 @@
 }
 
 .repo-name {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 
-  font-size: 1.8rem;
+  font-size: 2.1rem;
 }
+
+  .repo-name::first-letter {
+    text-transform: uppercase;
+  }
 
 .repo-desc {
   margin-bottom: 20px;
+
+  font-size: 1.3rem;
+  line-height: 1.5;
 }
 
 .repo-stats {
