--- a/client/sass/sections/_footer.scss
+++ b/client/sass/sections/_footer.scss
@@ -4,11 +4,29 @@
   padding-bottom: 40px;
 
   background-color: $black;
+
+  @include min($tablet) {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+
+.footer-container {
+  @include min($tablet) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .footer-logo {
   width: 50px;
   margin-bottom: 30px;
+
+  @include min($tablet) {
+    width: auto;
+    margin-right: 100px;
+    margin-bottom: 0;
+  }
 }
 
 .footer-heading {
@@ -18,6 +36,12 @@
   background-image: url("images/footer/heading.svg");
   background-position: left bottom;
   background-repeat: no-repeat;
+
+  @include min($tablet) {
+    margin-bottom: 0;
+
+    font-size: 1.6rem;
+  }
 }
 
 .footer-cta {
@@ -25,6 +49,12 @@
   align-items: center;
 
   color: $copper;
+
+  @include min($tablet) {
+    margin-left: auto;
+
+    color: $white;
+  }
 }
 
   .footer-cta-icon {
