--- a/client/sass/sections/_footer.scss
+++ b/client/sass/sections/_footer.scss
@@ -6,6 +6,7 @@
   background-color: $black;
 
   @include min($tablet) {
+    margin-top: 75px;
     padding-top: 100px;
     padding-bottom: 100px;
   }
