--- a/client/sass/sections/_about.scss
+++ b/client/sass/sections/_about.scss
@@ -1,4 +1,40 @@
 .about {
+
+}
+
+// topbar
+
+.about-topbar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  margin-bottom: 20px;
+}
+
+.about-heading {
+  margin-right: auto;
+}
+
+.about-button {
+  width: 25px;
+  height: 25px;
+
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.about-button-next { background-image: url("images/about/next.svg"); }
+.about-button-prev { background-image: url("images/about/prev.svg"); }
+
+.about-icon {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+// content
+
+.about-content {
   transition: height .5s ease;
 
   position: relative;
@@ -9,10 +45,6 @@
   visibility: hidden;
 
   transition: opacity .5s ease, visibility 0s ease .5s;
-
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
   .about-piece.is-active {
@@ -22,6 +54,6 @@
     transition-delay: 0s;
   }
 
-.about-text {
+.about-piece-text {
   line-height: 1.5;
 }
