adjust about topbar tablet margin

--- a/client/sass/sections/_about.scss
+++ b/client/sass/sections/_about.scss
@@ -10,6 +10,10 @@
   align-items: center;
 
   margin-bottom: 20px;
+
+  @include min($tablet) {
+    margin-bottom: 30px;
+  }
 }
 
 .about-heading {
