--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -11,7 +11,7 @@
 
 // COMPONENTS
 
-@import "components/keyframes";
+@import "components/repo";
 @import "components/rule";
 @import "components/section";
 
@@ -19,7 +19,7 @@
 
 @import "sections/about";
 @import "sections/badge";
+@import "sections/code";
 @import "sections/contact";
 @import "sections/footer";
 @import "sections/header";
-@import "sections/repos";
