--- a/client/sass/components/_repo.scss
+++ b/client/sass/components/_repo.scss
@@ -1,10 +1,35 @@
 .repo {
-  margin-bottom: 30px;
-  padding-bottom: 30px;
-
   @include min($tablet)  { flex-basis: 45%; }
   @include min($desktop) { flex-basis: 27.5%; }
 }
+
+  // spacing
+
+  .repo:not(:last-child) {
+    position: relative;
+
+    margin-bottom: 30px;
+    padding-bottom: 30px;
+  }
+
+  // mobile bottom "border"
+
+  .repo:not(:last-child)::after {
+    content: "";
+
+    position: absolute;
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 1px;
+
+    background-image: linear-gradient($gradient);
+
+    @include min($tablet) {
+      content: none;
+    }
+  }
 
 .repo-name {
   display: block;
