add about ages markup

--- a/client/sass/sections/_about.scss
+++ b/client/sass/sections/_about.scss
@@ -61,3 +61,27 @@
 .about-text {
   line-height: 1.5;
 }
+
+.about-wrap {
+
+}
+
+.about-age {
+
+}
+
+.about-age-meta {
+
+}
+
+.about-age-meta-heading {
+
+}
+
+.about-age-meta-text {
+
+}
+
+.about-age-image {
+
+}
