add contact link hover for desktop

--- a/client/sass/sections/_contact.scss
+++ b/client/sass/sections/_contact.scss
@@ -32,6 +32,11 @@
   }
 }
 
+  @include min($desktop) {
+    .contact-link-text                     { transition: color .5s ease; }
+    .contact-link:hover .contact-link-text { color: $copper; }
+  }
+
 .contact-link-icon {
   fill: $white;
 
